[workspace]

members = [
    "common/channel",
    "common/directory",
    "common/hashset_delay",
    "common/lighthouse_metrics",
    "common/merkle_tree",
    "common/task_executor",
    "common/ionian_version",
    "common/unused_port",
    "common/cfx_rpc_client",

    "node",
    "node/log_entry_sync",
    "node/miner",
    "node/network",
    "node/router",
    "node/rpc",
    "node/shared_types",
    "node/store",
    "node/storage",
    "node/storage-async",
    "node/sync",
]
